[gd_scene load_steps=14 format=3 uid="uid://tduc0yimumya"]

[ext_resource type="Texture2D" uid="uid://1bccn61y51ct" path="res://art/PixelPlatformerSet1v.1.1/tile.png" id="1_5igkp"]
[ext_resource type="PackedScene" uid="uid://cnpufhcnp0uly" path="res://scenes/player.tscn" id="2_0a6ic"]
[ext_resource type="PackedScene" uid="uid://d1li4c7brwdcs" path="res://scenes/sunlight.tscn" id="3_y01op"]
[ext_resource type="Script" path="res://scripts/letterTrigger.gd" id="4_tyjo7"]
[ext_resource type="Texture2D" uid="uid://dopenmdup38i" path="res://art/PixelPlatformerSet1v.1.1/letter.png" id="5_4jcoa"]
[ext_resource type="Script" path="res://scripts/Letter.gd" id="6_rgfee"]
[ext_resource type="FontFile" uid="uid://8kmieqk7u8ho" path="res://fonts/LastPriestess.ttf" id="7_pu0mk"]
[ext_resource type="AudioStream" uid="uid://cfqidwiok66j7" path="res://audio/paper.wav" id="8_rum32"]
[ext_resource type="PackedScene" uid="uid://b2ow1ou5y8kgi" path="res://scenes/killzone.tscn" id="9_6pedu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4h1rq"]
texture = ExtResource("1_5igkp")
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
0:26/0 = 0
0:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:26/0 = 0
1:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:26/0 = 0
2:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:26/0 = 0
3:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:26/0 = 0
4:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:26/0 = 0
5:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:26/0 = 0
6:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:26/0 = 0
7:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:26/0 = 0
8:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:26/0 = 0
9:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:26/0 = 0
10:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:26/0 = 0
11:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:26/0 = 0
12:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:26/0 = 0
13:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:26/0 = 0
14:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:26/0 = 0
15:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:26/0 = 0
16:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:26/0 = 0
17:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:26/0 = 0
18:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:26/0 = 0
19:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:26/0 = 0
20:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:26/0 = 0
21:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
22:26/0 = 0
22:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
23:26/0 = 0
23:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
21:27/0 = 0
22:27/0 = 0
23:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
21:28/0 = 0
22:28/0 = 0
23:28/0 = 0

[sub_resource type="TileSet" id="TileSet_267n8"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4h1rq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq3nj"]
size = Vector2(53, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kntmf"]
size = Vector2(1998, 20)

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, -8)
tile_set = SubResource("TileSet_267n8")
format = 2
layer_0/tile_data = PackedInt32Array(65524, 0, 25, 131060, 0, 26, 196596, 0, 27, 262132, 0, 28, 65525, 65536, 25, 131061, 65536, 26, 196597, 65536, 27, 262133, 65536, 28, 65526, 131072, 25, 131062, 131072, 26, 196598, 131072, 27, 262134, 131072, 28, 65527, 196608, 25, 131063, 196608, 26, 196599, 196608, 27, 262135, 196608, 28, 65528, 262144, 25, 131064, 262144, 26, 196600, 262144, 27, 262136, 262144, 28, 65529, 327680, 25, 131065, 327680, 26, 196601, 327680, 27, 262137, 327680, 28, 65530, 393216, 25, 131066, 393216, 26, 196602, 393216, 27, 262138, 393216, 28, 65531, 458752, 25, 131067, 458752, 26, 196603, 458752, 27, 262139, 458752, 28, 65532, 524288, 25, 131068, 524288, 26, 196604, 524288, 27, 262140, 524288, 28, 65533, 589824, 25, 131069, 589824, 26, 196605, 589824, 27, 262141, 589824, 28, 65534, 655360, 25, 131070, 655360, 26, 196606, 655360, 27, 262142, 655360, 28, 65535, 720896, 25, 131071, 720896, 26, 196607, 720896, 27, 262143, 720896, 28, 0, 786432, 25, 65536, 786432, 26, 131072, 786432, 27, 196608, 786432, 28, 1, 851968, 25, 65537, 851968, 26, 131073, 851968, 27, 196609, 851968, 28, 2, 917504, 25, 65538, 917504, 26, 131074, 917504, 27, 196610, 917504, 28, 3, 983040, 25, 65539, 983040, 26, 131075, 983040, 27, 196611, 983040, 28, 4, 1048576, 25, 65540, 1048576, 26, 131076, 1048576, 27, 196612, 1048576, 28, 5, 1114112, 25, 65541, 1114112, 26, 131077, 1114112, 27, 196613, 1114112, 28, 6, 1179648, 25, 65542, 1179648, 26, 131078, 1179648, 27, 196614, 1179648, 28, 7, 1245184, 25, 65543, 1245184, 26, 131079, 1245184, 27, 196615, 1245184, 28, 8, 1310720, 25, 65544, 1310720, 26, 131080, 1310720, 27, 196616, 1310720, 28, 9, 1376256, 25, 65545, 1376256, 26, 131081, 1376256, 27, 196617, 1376256, 28, 10, 1441792, 25, 65546, 1441792, 26, 131082, 1441792, 27, 196618, 1441792, 28, 11, 1507328, 25, 65547, 1507328, 26, 131083, 1507328, 27, 196619, 1507328, 28, -131056, 131072, 25, -65520, 131072, 26, -131055, 196608, 25, -65519, 196608, 26, -131054, 262144, 25, -65518, 262144, 26, -262123, 131072, 25, -196587, 131072, 26, -262122, 196608, 25, -196586, 196608, 26, -262121, 262144, 25, -196585, 262144, 26, -262115, 131072, 25, -196579, 131072, 26, -262114, 196608, 25, -196578, 196608, 26, -262113, 262144, 25, -196577, 262144, 26, 43, 327680, 25, 65579, 327680, 26, 131115, 327680, 27, 196651, 327680, 28, 44, 393216, 25, 65580, 393216, 26, 131116, 393216, 27, 196652, 393216, 28, 45, 458752, 25, 65581, 458752, 26, 131117, 458752, 27, 196653, 458752, 28, 46, 524288, 25, 65582, 524288, 26, 131118, 524288, 27, 196654, 524288, 28, 47, 589824, 25, 65583, 589824, 26, 131119, 589824, 27, 196655, 589824, 28, 48, 655360, 25, 65584, 655360, 26, 131120, 655360, 27, 196656, 655360, 28, 49, 720896, 25, 65585, 720896, 26, 131121, 720896, 27, 196657, 720896, 28, 50, 786432, 25, 65586, 786432, 26, 131122, 786432, 27, 196658, 786432, 28, 51, 851968, 25, 65587, 851968, 26, 131123, 851968, 27, 196659, 851968, 28, 52, 917504, 25, 65588, 917504, 26, 131124, 917504, 27, 196660, 917504, 28, 53, 983040, 25, 65589, 983040, 26, 131125, 983040, 27, 196661, 983040, 28, 54, 1048576, 25, 65590, 1048576, 26, 131126, 1048576, 27, 196662, 1048576, 28, 55, 1114112, 25, 65591, 1114112, 26, 131127, 1114112, 27, 196663, 1114112, 28, 56, 1179648, 25, 65592, 1179648, 26, 131128, 1179648, 27, 196664, 1179648, 28, 57, 1245184, 25, 65593, 1245184, 26, 131129, 1245184, 27, 196665, 1245184, 28, 58, 1310720, 25, 65594, 1310720, 26, 131130, 1310720, 27, 196666, 1310720, 28, 59, 1376256, 25, 65595, 1376256, 26, 131131, 1376256, 27, 196667, 1376256, 28, 60, 1441792, 25, 65596, 1441792, 26, 131132, 1441792, 27, 196668, 1441792, 28, 61, 1507328, 25, 65597, 1507328, 26, 131133, 1507328, 27, 196669, 1507328, 28, 65571, 131072, 25, 131107, 131072, 26, 65572, 196608, 25, 131108, 196608, 26, 65573, 262144, 25, 131109, 262144, 26, 65574, 327680, 25, 131110, 327680, 26, 65575, 393216, 25, 131111, 393216, 26, 65576, 458752, 25, 131112, 458752, 26)

[node name="player" parent="." instance=ExtResource("2_0a6ic")]
position = Vector2(0, -8)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(2, 2)

[node name="Sunlight" parent="." instance=ExtResource("3_y01op")]
position = Vector2(558, -120)
scale = Vector2(1.52, 1.52)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(136, -3)
script = ExtResource("4_tyjo7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(222.5, -85.5)
shape = SubResource("RectangleShape2D_cq3nj")

[node name="Letter" type="Sprite2D" parent="Area2D"]
position = Vector2(224, -78)
texture = ExtResource("5_4jcoa")
script = ExtResource("6_rgfee")

[node name="Label" type="Label" parent="Area2D"]
offset_left = 217.0
offset_top = -111.0
offset_right = 352.0
offset_bottom = -85.0
theme_override_fonts/font = ExtResource("7_pu0mk")
theme_override_font_sizes/font_size = 14
text = "[E]"
metadata/_edit_use_anchors_ = true

[node name="PaperSound" type="AudioStreamPlayer2D" parent="Area2D"]
position = Vector2(224, -78)
stream = ExtResource("8_rum32")
bus = &"SFX"

[node name="Killzone" parent="." instance=ExtResource("9_6pedu")]
position = Vector2(-60, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(569, 0)
shape = SubResource("RectangleShape2D_kntmf")

[node name="Letter pickup area" type="Area2D" parent="."]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
